# meta-text

./: .dependency-cruiser.cjs  .gitignore  DOCUMENTATION_SETUP.md  ICON_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  KEYBOARD_SHORTCUTS.md  PATTERN_PROPOSAL.md  README.md  README.old.md  REFACTORING_SUMMARY.md  SEARCH_ARCHITECTURE_SUMMARY.md  THEME_MIGRATION.md  alembic.ini  db.session.sql  demo_source_doc_info_test.tsx  eslint.config.js  frontend-backend.md  frontend-structure.md  future-features.md  index.html  main.py  new-feature.md  package-lock.json  package.json  pyproject.toml  stats.html  test_source_doc_editing.tsx  tsconfig.json  typedoc.json  vite.config.js  vite.config.ts
.github/: copilot-instructions.md  llms-full.txt
ARCHIVE_DELETE_ME/: useChunksManager.hook.ts  useDebouncedField.ts
alembic/: env.py
backend/: .env.example  README.md  auth_README.md  config.py  database.sqlite  db.py  definition_with_context_instructions.txt  dependencies.py  instructions.txt  main.py  models.new copy.py  models.py  note_summary_comparison_instructions.txt  test_ai_services.py  test_auth_services.py
docs/: README.md  best-practices-examples.ts  performance-patterns.ts  refactoring-example.ts
public/: README.md
src/: App.backup.tsx  App.css  App.jsx  App.tsx  AppWithThemes.tsx  BrowsePage.jsx  DocumentListPage.jsx  DocumentManagePage.css  DocumentManagePage.jsx  DocumentManageSidebar.css  DocumentViewer.css  DocumentViewer.jsx  EditPage.css  EditPage.jsx  NewPage.css  NewPage.jsx  README.md  UploadPage.css  UploadPage.jsx  authREADME.md  index.css  index.ts  main.jsx  (+10 more)
(+1159 files in other folders)
