[project]
name = "meta-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "fastapi-cors",
    "openai>=1.82.0",
    "python-freedictionaryapi[async-client]>=0.9.10",
    "pytest>=8.4.0",
]
