[project]
name = "meta-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "fastapi-cors",
    "openai>=1.82.0",
    "python-freedictionaryapi[async-client]>=0.9.10",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.3.0",
    "loguru>=0.7.3",
]
